INCLUDE_DIRECTORIES( ${PNG_INCLUDE_DIR} ${ZLIB_INCLUDE_DIR} )

IF(OSG_CPP_EXCEPTIONS_AVAILABLE)
    ADD_DEFINITIONS(-DOSG_CPP_EXCEPTIONS_AVAILABLE)
ENDIF()

SET(TARGET_SRC ReaderWriterPNG.cpp )
SET(TARGET_LIBRARIES_VARS ZLIB_LIBRARY )


#### end var setup  ###
SETUP_PLUGIN(png)

IF(DEFINED PNG_LIBRARY_RELEASE AND DEFINED PNG_LIBRARY_DEBUG)
   TARGET_LINK_LIBRARIES(${TARGET_TARGETNAME} ${PNG_LIBRARY})
ELSE(DEFINED PNG_LIBRARY_RELEASE AND DEFINED PNG_LIBRARY_DEBUG)
   LINK_WITH_VARIABLES(${TARGET_TARGETNAME} PNG_LIBRARY)
ENDIF(DEFINED PNG_LIBRARY_RELEASE AND DEFINED PNG_LIBRARY_DEBUG)

IF(MSVC)
    SET_TARGET_PROPERTIES("${TARGET_DEFAULT_PREFIX}${TARGET_NAME}" PROPERTIES LINK_FLAGS_DEBUG "/NODEFAULTLIB:MSVCRT")
ENDIF()

